--- a/editor.ini
+++ b/editor.ini
@@ -9,9 +9,10 @@ Size=300,300
 Collapsed=1
 
 [Window][Scene Viewer]
-Pos=51,135
-Size=200,400
+Pos=0,19
+Size=199,1061
 Collapsed=0
+DockId=0x0000001F,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,19
@@ -19,13 +20,13 @@ Size=1920,1061
 Collapsed=0
 
 [Window][Properties]
-Pos=1473,19
-Size=447,1061
+Pos=1391,19
+Size=529,1061
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x0000001E,0
 
 [Window][Edit Influencers]
-Pos=702,481
+Pos=709,481
 Size=518,448
 Collapsed=0
 
@@ -39,19 +40,37 @@ RefScale=13
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace               ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=X
-  DockNode              ID=0x0000000D Parent=0x8B93E3BD SizeRef=1471,1061 Split=X
-    DockNode            ID=0x0000000B Parent=0x0000000D SizeRef=199,1061 Selected=0xB8EDB42B
-    DockNode            ID=0x0000000C Parent=0x0000000D SizeRef=1719,1061 Split=X
-      DockNode          ID=0x00000009 Parent=0x0000000C SizeRef=1355,1061 Split=X
-        DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=199,1061 Selected=0xB8EDB42B
-        DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=1719,1061 Split=X
-          DockNode      ID=0x00000005 Parent=0x00000008 SizeRef=1273,1061 Split=X
-            DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=199,1061 Selected=0xB8EDB42B
-            DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1719,1061 Split=X
-              DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1580,1061 CentralNode=1
-              DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=338,1061 Selected=0xC89E3217
-          DockNode      ID=0x00000006 Parent=0x00000008 SizeRef=444,1061 Selected=0xC89E3217
-      DockNode          ID=0x0000000A Parent=0x0000000C SizeRef=362,1061 Selected=0xC89E3217
-  DockNode              ID=0x0000000E Parent=0x8B93E3BD SizeRef=447,1061 Selected=0xC89E3217
+DockSpace                                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1061 Split=X
+  DockNode                                ID=0x0000001F Parent=0x8B93E3BD SizeRef=199,1061 Selected=0xB8EDB42B
+  DockNode                                ID=0x00000020 Parent=0x8B93E3BD SizeRef=1719,1061 Split=X
+    DockNode                              ID=0x0000001D Parent=0x00000020 SizeRef=1389,1061 Split=X
+      DockNode                            ID=0x0000001B Parent=0x0000001D SizeRef=1499,1061 Split=X
+        DockNode                          ID=0x00000019 Parent=0x0000001B SizeRef=1328,1061 Split=X
+          DockNode                        ID=0x00000017 Parent=0x00000019 SizeRef=1536,1061 Split=X
+            DockNode                      ID=0x00000015 Parent=0x00000017 SizeRef=1511,1061 Split=X
+              DockNode                    ID=0x00000013 Parent=0x00000015 SizeRef=1415,1061 Split=X
+                DockNode                  ID=0x00000011 Parent=0x00000013 SizeRef=199,1061 Selected=0xB8EDB42B
+                DockNode                  ID=0x00000012 Parent=0x00000013 SizeRef=1719,1061 Split=X
+                  DockNode                ID=0x0000000F Parent=0x00000012 SizeRef=1512,1061 Split=X
+                    DockNode              ID=0x0000000D Parent=0x0000000F SizeRef=1471,1061 Split=X
+                      DockNode            ID=0x0000000B Parent=0x0000000D SizeRef=199,1061 Selected=0xB8EDB42B
+                      DockNode            ID=0x0000000C Parent=0x0000000D SizeRef=1719,1061 Split=X
+                        DockNode          ID=0x00000009 Parent=0x0000000C SizeRef=1355,1061 Split=X
+                          DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=199,1061 Selected=0xB8EDB42B
+                          DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=1719,1061 Split=X
+                            DockNode      ID=0x00000005 Parent=0x00000008 SizeRef=1273,1061 Split=X
+                              DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=199,1061 Selected=0xB8EDB42B
+                              DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1719,1061 Split=X
+                                DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1580,1061 CentralNode=1
+                                DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=338,1061 Selected=0xC89E3217
+                            DockNode      ID=0x00000006 Parent=0x00000008 SizeRef=444,1061 Selected=0xC89E3217
+                        DockNode          ID=0x0000000A Parent=0x0000000C SizeRef=362,1061 Selected=0xC89E3217
+                    DockNode              ID=0x0000000E Parent=0x0000000F SizeRef=447,1061 Selected=0xC89E3217
+                  DockNode                ID=0x00000010 Parent=0x00000012 SizeRef=406,1061 Selected=0xC89E3217
+              DockNode                    ID=0x00000014 Parent=0x00000015 SizeRef=503,1061 Selected=0xC89E3217
+            DockNode                      ID=0x00000016 Parent=0x00000017 SizeRef=407,1061 Selected=0xC89E3217
+          DockNode                        ID=0x00000018 Parent=0x00000019 SizeRef=382,1061 Selected=0xC89E3217
+        DockNode                          ID=0x0000001A Parent=0x0000001B SizeRef=590,1061 Selected=0xC89E3217
+      DockNode                            ID=0x0000001C Parent=0x0000001D SizeRef=419,1061 Selected=0xC89E3217
+    DockNode                              ID=0x0000001E Parent=0x00000020 SizeRef=529,1061 Selected=0xC89E3217
 
